@@ -8,16 +8,18 @@
 ##TODO## add convenient helper for generating SSL-certificates, make one-time SMF service calling that helper on request
 
 %define src_name dovecot
-# maybe set to nullstring outside release-candidates (example: 1.1/rc)
-%define downloadversion	 1.1/rc
+# maybe set to nullstring outside release-candidates (example: 1.1/rc  or just 1.1)
+#%define downloadversion	 1.1/rc
+%define downloadversion	 1.1
 
 %include Solaris.inc
 Name:                    SFEdovecot
 Summary:                 dovecot - A Maildir based pop3/imap email daemon
 URL:                     http://www.dovecot.org
 #note: see downloadversion above
-Version:                 1.1.rc5
+Version:                 1.1.4
 Source:                  http://dovecot.org/releases/%{downloadversion}/%{src_name}-%{version}.tar.gz
+Source2:		dovecot.xml
 
 
 SUNW_BaseDir:            %{_basedir}
@@ -34,10 +36,13 @@ Requires: %name-root
 %package root
 Summary:                 %{summary} - / filesystem
 SUNW_BaseDir:            /
+Requires: %name
 
 
 %prep
 %setup -q -n %{src_name}-%version
+cp %{SOURCE2} dovecot.xml
+
 
 %build
 CPUS=`/usr/sbin/psrinfo | grep on-line | wc -l | tr -d ' '`
@@ -81,6 +86,48 @@ rm -rf $RPM_BUILD_ROOT
 make install DESTDIR=$RPM_BUILD_ROOT
 rm -rf $RPM_BUILD_ROOT/usr/include
 
+mkdir -p ${RPM_BUILD_ROOT}/var/svc/manifest/site/
+cp dovecot.xml ${RPM_BUILD_ROOT}/var/svc/manifest/site/
+
+%{?pkgbuild_postprocess: %pkgbuild_postprocess -v -c "%{version}:%{jds_version}:%{name}:$RPM_ARCH:%(date +%%Y-%%m-%%d):%{support_level}" $RPM_BUILD_ROOT}
+
+%post -n SFEdovecot-root
+
+if [ -f /lib/svc/share/smf_include.sh ] ; then
+    . /lib/svc/share/smf_include.sh
+    smf_present
+    if [ $? -eq 0 ]; then
+       /usr/sbin/svccfg import /var/svc/manifest/site/dovecot.xml
+    fi
+fi
+
+exit 0
+
+%preun -n SFEdovecot-root
+if [  -f /lib/svc/share/smf_include.sh ] ; then
+    . /lib/svc/share/smf_include.sh
+    smf_present
+    if [ $? -eq 0 ]; then
+       if [ `svcs  -H -o STATE svc:/site/dovecot:default` != "disabled" ]; then
+           svcadm disable svc:/site/dovecot:default
+       fi
+    fi
+fi
+
+
+%postun -n SFEdovecot-root
+
+if [ -f /lib/svc/share/smf_include.sh ] ; then
+    . /lib/svc/share/smf_include.sh
+    smf_present
+    if [ $? -eq 0 ] ; then
+       /usr/sbin/svccfg export svc:/site/dovecot:default > /dev/null 2>&1
+       if [ $? -eq 0 ] ; then
+           /usr/sbin/svccfg delete -f svc:/site/dovecot:default
+       fi
+    fi
+fi
+exit 0
 
 %clean
 rm -rf $RPM_BUILD_ROOT
@@ -103,8 +150,14 @@ rm -rf $RPM_BUILD_ROOT
 %dir %attr (0755, root, sys) %{_sysconfdir}
 %dir %attr (0755, root, bin) %{_sysconfdir}/%{src_name}
 %{_sysconfdir}/%{src_name}/*
+%defattr (-, root, sys)
+%dir %attr (0755, root, sys) %{_localstatedir}
+%class(manifest) %attr(0444, root, sys)/var/svc/manifest/site/dovecot.xml
 
 
 %changelog
+* Mon Oct 06 2008  - Thomas Wagner
+- bump to 1.1.4
+- add SMF FMRI / manifest for site/dovecot
 * Thu May 22 2008  - Thomas Wagner
 - Initial spec
