@@ -1,0 +1,90 @@
+<?xml version="1.0"?>
+<!DOCTYPE service_bundle SYSTEM "/usr/share/lib/xml/dtd/service_bundle.dtd.1">
+<!--
+
+phpEasyTools  for New Bie 0.1
+Author script PHP easySMF:
+David Galan Ortiz
+www.aulaunix.org
+
+
+This program is free software; you can redistribute it and/ormodify it under the terms of version 2 of the GNU General PublicLicense as published by the Free Software Foundation.This program is distributed in the hope that it will be useful,but WITHOUT ANY WARRANTY; without even the implied warranty ofMERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See theGNU General Public License for more details.You should have received a copy of the GNU General Public Licensealong with this program; if not, write to the Free SoftwareFoundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307USA
+
+
+  --> 
+             
+<service_bundle type='manifest' name='dovecot'>
+  <service name='site' type='service' version='1'>
+
+<instance name='dovecot' enabled='false'>
+
+	<dependency name='net-loopback' grouping='require_any'
+			restart_on='none' type='service'>
+		<service_fmri value='svc:/network/loopback' />
+	</dependency>
+
+	<dependency name='net-service' grouping='require_all'
+			restart_on='none' type='service'>
+		<service_fmri value='svc:/network/service'/>
+	</dependency>
+
+	<dependency name='net-physical' grouping='require_all'
+			restart_on='none' type='service'>
+		<service_fmri value='svc:/network/physical' />
+	</dependency>
+
+	<dependency name='filesystem-local' grouping='require_all'
+			restart_on='none' type='service'>
+		<service_fmri value='svc:/system/filesystem/local' />
+	</dependency>
+
+	<dependent name='dovecot_multi-user-server' grouping='optional_all'
+			restart_on='none'>
+		<service_fmri value='svc:/milestone/multi-user-server' />
+	</dependent>
+
+ <!--
+          START  METHOD
+      -->
+      <exec_method type='method'
+                   name='start'
+                   exec='/usr/sbin/dovecot'
+                   timeout_seconds='60'>
+        <method_context>
+          <method_credential user='root' group='other' />
+        </method_context>
+      </exec_method>
+  <!--
+          STOP METHOD
+      -->
+      <exec_method type='method'
+                   name='stop'
+                   exec=':kill'
+                   timeout_seconds='60'>
+        <method_context>
+         <method_credential user='root' group='other' />
+        </method_context>
+      </exec_method>
+
+      <property_group name='startd' type='framework'>
+        <propval name='duration' type='astring' value='contract'/>
+        <propval name='ignore_error' type='astring' value='core,signal' />
+      </property_group>
+
+    </instance>
+ <!--
+	DESCRIBE THE SERVICE	
+    -->
+    <template>
+      <common_name>
+        <loctext xml:lang='C'>
+		 dovecot imap and pop maildaemon
+        </loctext>      
+      </common_name>
+      <documentation>
+                <doc_link name='dovecot'
+                    uri='file://usr/share/doc/dovecot/' />
+      </documentation>
+    </template>
+  </service>
+</service_bundle>
