@@ -1,3 +1,6 @@
+2008-10-07  Thomas Wagner  <tom68@users.sourceforge.net>
+        * SFEdovecot.spec: - bump to 1.1.4 - add SMF FMRI / manifest for site/dovecot
+
 2008-10-04  Thomas Wagner  <tom68@users.sourceforge.net>
         * SFEsamba.spec: .spec: mkdir samba/log/ directory for client logs
           patch5: syntax to useradd in add machine script - useradd still blames about "$" character, smart ideas needed
